<resources>
    <string name="app_name">SEAN</string>
    <string name="search_show">Search Show</string>
    <string name="search">Search</string>
    <string name="app_greeting_message">Enter the name of the series you would like to look up in the field below, or add a new series into the app database!</string>
    <string name="search_by_series_title">Search by series title</string>
    <string name="genre">Genre</string>
    <string name="search_by">Search by:</string>
    <string name="show_status">Show Status</string>
    <string name="cancelled_on_hold">Cancelled/On Hold</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="add_a_new_series">Add a new Series</string>
    <string name="genre_field">Genre</string>
    <string name="name_of_series">Name of Series</string>
    <string name="show_type">Show Type</string>
    <string name="add_series">Add Series</string>
    <string name="cancel">Cancel Addition</string>
    <string name="no">No</string>
    <string name="series_not_found_message">The series you entered in does not exist. Would you like to add the series into the database?</string>
    <string name="yes">Yes</string>
    <string name="series_addition_message">Enter information on the series you will be adding:</string>
    <string name="series_name_bar">Enter Series Name</string>
    <string name="sean_homepage">SEAN: Series Entertainment Archive Network</string>
    <string name="search_option">Search for a series</string>
    <string name="archive_option">Go to My Archive</string>
    <string name="settings_option">Settings</string>
    <string name="profile_button">Profile</string>
    <string name="appHeader">SEAN: Series Entertainment Archive Network</string>
    <string name="header">SEAN: Series Entertainment Archive Network</string>
    <string name="return_button">Return to Home Page</string>
    <string name="under_construction_message">This page is still under construction. We apologize for the inconvenience: Press the Return to Home Page button to go back.</string>
    <string name="homepage_button">Return to Home Page</string>
    <string name="searchOption">Search for a Series</string>
    <string name="myArchiveOption">Access My Archive</string>
    <string name="settingsOption">App Settings</string>
    <string name="profileOption">Profile</string>
    <string name="go_back">Go Back</string>
    <string name="archive_settings">Archive Settings</string>
    <string name="home_page">Home Page</string>
    <string name="user_settings">User Settings</string>
    <string name="back_myArchive">Back</string>
    <string name="save_myArchive_changes">Save Changes</string>
    <string name="home_page_myArchive">Go to Home Page</string>
    <string name="series_database_list">Series Database List</string>
    <string name="back_bookmark">Back</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="add_a_series">Add a Series</string>
    <string name="back">Back</string>
    <string name="search_databasePage">Search</string>
    <string name="back_out_myArchive">Back</string>
    <string name="myArchive_settings">Archive Settings</string>
    <string name="my_archive_settings">My Archive Settings</string>
    <string name="notification_button">notification settings</string>
    <string name="appearance_button">appearance settings</string>
    <string name="settings">App Settings</string>
    <string name="profile_button_settings">Access My Profile</string>
    <string name="go_to_my_profile">Go to My Profile</string>
    <string name="return_to_home_page">Return to Home Page</string>
    <string name="sort_subtitle">Sort By:</string>
    <string name="series_title_button">Series Title</string>
    <string name="series_type_button">Series Type</string>
    <string name="genre_button">Genre</string>
    <string name="sort_type_title">Sort Type</string>
    <string name="descending_sort_button">Descending Sort (A-Z)</string>
    <string name="ascending_sort_button">Ascending Sort (Z-A)</string>
    <string name="clear_list_text">Clear My Archive List</string>
    <string name="save_changes_text">Save Changes</string>
    <string name="display_sorting_id_text">Display Sorting ID?</string>
    <string name="back_button_appearance">Go Back</string>
    <string name="cancel_changes_text">Cancel Changes</string>
    <string name="hold_addition_message">Enter hold information:</string>
    <string name="hold_season">Season</string>
    <string name="hold_episode">Episode</string>
    <string name="hold_timeStamp">Timestamp</string>
    <string name="hold_pageNumber">Page Number</string>
    <string name="hold_chapter">Chapter</string>
    <string name="fill_text_fields_message">Please fill in the hold information.</string>
    <string name="add_hold">Add Hold</string>
    <string name="imdb">IMDb Page</string>
    <string name="wiki">Wikipedia Page</string>
    <string name="imdb_url">IMDb URL</string>
    <string name="wiki_url">Wikipedia URL</string>
    <string name="add_url">Update URL</string>
    <string name="url_edit_message">Enter the URL for this series\' IMDb page and/or its Wikipedia page:</string>
    <string name="url_edit_page_button">Edit Links</string>
    <string name="notifications_changes_cancel">Cancel</string>
    <string name="new_releases_switch_text">New releases for ongoing series</string>
    <string name="notification_type_title">Send notifications as:</string>
    <string name="notify_me_title">Archive-Based Notifications:</string>
    <string name="recommendations_switch">Recommendations to bookmarked series</string>
    <string name="save_changes_switch">Save Changes</string>
    <string name="current_status_switch">Updates on bookmarked series\' status</string>
    <string name="send_e_mail_switch">E-mail</string>
    <string name="text_message_switch">Text message</string>
    <string name="notifications_active">Turn On Notifications</string>
    <string name="monthly_additions_switch">New additions to database (Monthly basis)</string>
    <string name="app_updates_switch">App updates</string>
    <string name="app_wide_notifications_text">App-Wide Notifications</string>

</resources>
