<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sean.itr1.HomePage">

    <TextView
        android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/homepageHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal"
        android:textSize="36sp" />

    <Button
        android:text="@string/profileOption"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/profile_button"
        android:onClick="onClick"
        android:layout_below="@+id/app_settings_button"
        android:layout_alignStart="@+id/app_settings_button" />

    <Button
        android:text="@string/settingsOption"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/app_settings_button"
        android:onClick="onClick"
        android:layout_below="@+id/my_archive_button"
        android:layout_alignStart="@+id/database_button" />

    <Button
        android:text="@string/myArchiveOption"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/my_archive_button"
        android:onClick="onClick"
        android:layout_alignStart="@+id/app_settings_button"
        android:layout_below="@+id/database_button" />

    <Button
        android:text="@string/searchOption"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/home_search_button"
        android:onClick="onClick"
        android:layout_below="@+id/homepageHeader"
        android:layout_alignStart="@+id/database_button"
        android:layout_marginTop="51dp" />

    <Button
        android:text="@string/series_database_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/database_button"
        android:layout_below="@+id/home_search_button"
        android:layout_centerHorizontal="true"
        android:onClick="onClick" />

</RelativeLayout>
