<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_hold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sean.itr1.AddNewHold">

    <TextView
        android:text="@string/hold_addition_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_new_hold_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hold_episode_edit_text"
        android:hint="@string/hold_episode"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/hold_season_edit_text"
        android:layout_alignLeft="@+id/hold_season_edit_text"
        android:layout_alignStart="@+id/hold_season_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hold_timeStamp_edit_text"
        android:hint="@string/hold_timeStamp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/hold_episode_edit_text"
        android:layout_alignLeft="@+id/hold_episode_edit_text"
        android:layout_alignStart="@+id/hold_episode_edit_text" />


    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_action"
        android:layout_below="@+id/add_hold_to_series"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="onClick"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hold_season_edit_text"
        android:hint="@string/hold_season"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/add_new_hold_message"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/add_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_hold_to_series"
        android:onClick="onClick"
        android:elevation="0dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/hold_pageNumber_edit_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hold_chapter_edit_text"
        android:hint="@string/hold_chapter"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/hold_pageNumber_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hold_pageNumber_edit_text"
        android:hint="@string/hold_pageNumber"
        android:gravity="center_vertical|center_horizontal"
        android:layout_above="@+id/hold_chapter_edit_text"
        android:layout_alignStart="@+id/hold_timeStamp_edit_text" />

    <TextView
        android:text="@string/fill_text_fields_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fill_text_fields_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/cancel_action"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
