<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_no_show_exists_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sean.itr1.NoShowExistsWindow">

    <TextView
        android:text="@string/series_not_found_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_addition_button"
        android:layout_alignLeft="@+id/confirm_addition_button"
        android:layout_alignStart="@+id/confirm_addition_button"
        android:layout_marginTop="14dp"
        android:id="@+id/decline_addition_button"
        android:onClick="onClick"/>

    <Button
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_addition_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"/>

</RelativeLayout>
